Mobile responsive fixes and footer alignment update

--- a/src/components/Footer/FooterSection.css
+++ b/src/components/Footer/FooterSection.css
@@ -213,7 +213,7 @@
   }
   .footer-bottom {
   background: #0054A6;
-  padding: 5px 10px;
+  padding: 4px 10px  !important;
   font-size: 9px;
   text-align: center;
   display: flex;
@@ -228,8 +228,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 3px;
-  font-size: 12px  !important;
+  gap: 2px;
+  font-size: 10px  !important;
 }
 
 .footer-bottom .bottom_right_content {
@@ -242,6 +242,10 @@
   text-decoration: underline;
 }
 
+
 }
+
+
+
 
  
