--- a/src/components/Pages/HospitalIntroSection.css
+++ b/src/components/Pages/HospitalIntroSection.css
@@ -27,7 +27,7 @@
 }
 
 .intro-left p {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.7;
   color: #444;
   margin-bottom: 15px;
@@ -174,7 +174,7 @@ p{
   padding-top: 0px!important;
 }
 .founder-intro{
-  font-size: 14px!important;
+  font-size: 13px!important;
 }
 .insurance-section{
   padding: 20px 10px;
