--- a/src/components/Pages/WhatsAppFloatingButton.css
+++ b/src/components/Pages/WhatsAppFloatingButton.css
@@ -29,9 +29,9 @@
 /* ✅ For mobile screens */
 @media (max-width: 480px) {
   .whatsapp-float {
-    width: 48px;
-    height: 48px;
-    bottom: 450px; /* Thoda upar mobile me */
+    width: 40px;
+    height: 40px;
+    bottom: 50px; /* Thoda upar mobile me */
     right: 10px;
   }
 
