--- a/src/components/Section/GallerySection/GallerysectionStyle2.css
+++ b/src/components/Section/GallerySection/GallerysectionStyle2.css
@@ -11,11 +11,11 @@
 }
 
 .cs_filter_btn {
-  padding: 20px 20px;
+  padding: 10px 16px;
   border: 1px solid #ccc;
   background-color: #fff;
   color: #000;
-  border-radius: 8px;
+  border-radius: 15px;
   cursor: pointer;
   transition: 0.3s;
   font-weight: 500;
@@ -67,8 +67,9 @@
 
   .cs_filter_btn {
     width: auto; 
-    padding: 8px 8px;
+    padding: 5px 8px;
     font-size: 11px;
+     border-radius: 15px;
   }
 
   .cs_gallery_grid_2 {
